--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
+.vl {
+	border-left: 6px solid green;
+	height: 500px;
+}
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -11,6 +15,9 @@ body {
 	font-size: 16px;
 	background-color: #222;
 	color: #aaa;
+	position: relative;
+	left: 80px;
+	top:2px;
 }
 
 .simple-container {
