--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-    <title>Document</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <title>NameME API</title>
 </head>
 <body>
-    {% block body %}
+    <div style="text-align: center;">
+    <h1>NameME API</h1>
+    <p>Created by <a href="https:\\github.com\YonLiud\">@YonLiud</a><br><a href="https://github.com/YonLiud/nameme-API/tree/dev">Source of NameME API</a></p>
     
+    {% block body %}
+
     {% endblock %}
+</div>
 </body>
 </html>
